{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 1803,
  "lineage": "5ada9eb1-4d7a-3f28-34bb-f855fab003cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00de3875b03809ec5",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-0026f4f649c6e237d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-0026f4f649c6e237d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0095e3bde728ff3ec"
              }
            ],
            "primary_network_interface_id": "eni-0095e3bde728ff3ec",
            "private_dns": "ip-172-16-1-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.139",
            "public_dns": "ec2-44-198-162-42.compute-1.amazonaws.com",
            "public_ip": "44.198.162.42",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08092d84f1d118d38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6e506eaa4f6ebcc",
            "tags": {
              "Name": "demo-project-backend"
            },
            "tags_all": {
              "Name": "demo-project-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c5a2dbe70c8fb3f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-0026f4f649c6e237d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.backend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00de3875b03809ec5",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-043a4b5011a85acdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-043a4b5011a85acdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-032e82c3f52f82893"
              }
            ],
            "primary_network_interface_id": "eni-032e82c3f52f82893",
            "private_dns": "ip-172-16-1-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.207",
            "public_dns": "ec2-44-197-243-88.compute-1.amazonaws.com",
            "public_ip": "44.197.243.88",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:421041021814:key/eb7b1361-6139-4dcd-a0e8-61114ce1ebbd",
                "throughput": 125,
                "volume_id": "vol-0e1fffde029db6674",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6e506eaa4f6ebcc",
            "tags": {
              "Name": "demo-project-frontend"
            },
            "tags_all": {
              "Name": "demo-project-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0432dce078061d0e5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-043a4b5011a85acdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.backend",
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:internet-gateway/igw-03c7dca7bb782d25d",
            "id": "igw-03c7dca7bb782d25d",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-igw"
            },
            "tags_all": {
              "Name": "demo-project-igw"
            },
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:route-table/rtb-0ba295dd8bff8b4c0",
            "id": "rtb-0ba295dd8bff8b4c0",
            "owner_id": "421041021814",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c7dca7bb782d25d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-project-public-rt"
            },
            "tags_all": {
              "Name": "demo-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "rtb-0ba295dd8bff8b4c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0935c41c785743ca3",
            "region": "us-east-1",
            "route_table_id": "rtb-0ba295dd8bff8b4c0",
            "subnet_id": "subnet-0d6e506eaa4f6ebcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e272f92025b15605",
            "region": "us-east-1",
            "route_table_id": "rtb-0ba295dd8bff8b4c0",
            "subnet_id": "subnet-0b840ae14efab842a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:security-group/sg-09c5a2dbe70c8fb3f",
            "description": "Security group for backend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c5a2dbe70c8fb3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "demo-project-backend-sg",
            "name_prefix": "",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-backend-sg"
            },
            "tags_all": {
              "Name": "demo-project-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "sg-09c5a2dbe70c8fb3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:security-group/sg-0432dce078061d0e5",
            "description": "Security group for frontend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0432dce078061d0e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-frontend-sg",
            "name_prefix": "",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-frontend-sg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "sg-0432dce078061d0e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0a5a8a6926035b965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5a8a6926035b965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0a5a8a6926035b965",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0af42f61454db870c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af42f61454db870c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0af42f61454db870c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0d6e506eaa4f6ebcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e506eaa4f6ebcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0d6e506eaa4f6ebcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0b840ae14efab842a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b840ae14efab842a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-04b2bc9ba3f84e39f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0b840ae14efab842a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:vpc/vpc-04b2bc9ba3f84e39f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a2214e68eb5fddc8",
            "default_route_table_id": "rtb-0b71a9f1e5edec9f1",
            "default_security_group_id": "sg-06e0b14d9ef27b65d",
            "dhcp_options_id": "dopt-0a4ef7ea8055a7aac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b2bc9ba3f84e39f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b71a9f1e5edec9f1",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project"
            },
            "tags_all": {
              "Name": "demo-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "vpc-04b2bc9ba3f84e39f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}